<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">

    <TextView
        android:id="@+id/accueil_titre_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/bienvenue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/accueil_explications"/>

    <TextView
        android:id="@+id/accueil_explications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/comment"
        android:textStyle="italic"
        android:textAllCaps="true"
        android:onClick="montrerExplications"
        app:layout_constraintTop_toBottomOf="@id/accueil_titre_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/accueil_jouer_btn"/>

    <Button
        android:id="@+id/accueil_jouer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:textAlignment="center"
        android:textStyle="italic"
        android:onClick="lancerChoix"
        app:layout_constraintTop_toBottomOf="@id/accueil_explications"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>